CDN, Controllers, and Javascript
Added Firebase CDN, Started adding controller to create list of top
stories ( That didnt work out well going to continue on it in the
morning ) Added javascript to the index.js to pull the top voted story
into the list to finish styling of list elements.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </ul>
   </div>
   <div id="rightSidebar">
-    <div class="rightsSidebarContent"> </div>
+    <div class="rightsSidebarContent">
+      Submit Article will form go here
+    </div>
   </div>
   <div class="pageContent">
     <div class="top-bar">
@@ -44,16 +46,18 @@
 </main>
 <!-- Jquery Library files   -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<!-- Firebase CDN --> 
+<script src="https://cdn.firebase.com/js/client/1.1.0/firebase.js"></script>
 <!-- AngularJS Library files --> 
 <script src="bower_components/angular/angular.min.js"></script> 
 <script src="bower_components/angular-route/angular-route.min.js"></script> 
-
 <!-- AngularJS Project files --> 
 <script defer src="scripts/templates.js"></script> 
 <script defer src="scripts/main.js"></script> 
 <script defer src="scripts/index/index.js"></script> 
 <script defer src="scripts/index/controllers.js"></script> 
 <script defer src="scripts/index/directives.js"></script> 
+<script defer src="scripts/new/TopStoriesController.js"></script> 
 <script defer src="scripts/form/form.js"></script> 
 <script defer src="scripts/form/controllers.js"></script> 
 <script defer src="scripts/form/directives.js"></script>
